# ros-pointcloud-stitching

./: CMakeLists.txt  README.md  package.xml
scripts/: extract_depth_images.py  extract_extrinsics.py  extract_intrinsics.py  extract_rgb_images.py  extract_service_control.py
srv/: StartCapture.srv
stitching/: align_extrinsics.py  stitcher.py  trajectory.py
