<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_stitching</name>
  <version>0.0.1</version>
  <description>Crater RGB-D capture + stitching pipeline</description>

  <maintainer email="yjain@greensightag.com">Yash Jain</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>